--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,10 @@ body{
     url('../imgs/1.jpg') no-repeat center center / cover;
     font-size: 10px;
     font-family: sans-serif;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.4;
+    margin: 0;
 }
 .container{
     max-width: 800px;
@@ -18,6 +22,8 @@ h1{
     font-size: 40px;
     color: #fff;
     margin-bottom: 2%;
+    font-weight: 400;
+    text-align: center;
 }
 #description{
     text-align: center;
@@ -34,4 +40,21 @@ form{
     display: flex;
     flex-direction: column;
     gap: 15px;
+}
+
+.select-group{
+    display: block;
+    width: 100%;
+    height: 2.375rem;
+    padding: 0.375rem;
+}
+
+input,
+button,
+select,
+textarea {
+  margin: 0;
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
 }
